--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -203,7 +203,6 @@
                         <li><a href="javascript:;">长龙</a></li>
                         <li><a href="javascript:;">走势</a></li>
                         <li><a href="javascript:;">技巧</a></li>
-                        <div style="clear: both;"></div>
                     </ul>
                     <div style="clear: both;"></div>
                 </div>
@@ -242,7 +241,7 @@
 
 
         @*高手推荐*@
-        <div id="mescroll0" class="Plan_CInfo mescroll mscroll" style="display: none;">
+        <div id="mescroll0" class="Plan_CInfo mescroll" style=" display: none;">
 
             <div id="datalist0" class="Plan_CIfBox data-list">
 
@@ -251,7 +250,7 @@
 
 
         @*免费专家*@
-        <div id="mescroll1" class="Plan_CInfo mescroll mscroll" style="display: none;">
+        <div id="mescroll1" class="Plan_CInfo mescroll" style="display: none;">
             <div id="datalist1" class="Plan_CIfBox data-list">
 
             </div>
