--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/LastPlay.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/LastPlay.cshtml
@@ -47,7 +47,7 @@
                         <h3 class="ThdDl_name f-l">
                             <a href="/Personal/UserCenter/@Model.Id">@Model.Name</a>
                         </h3>
-                        <a href="javascript:;" class="ThdDl_ds f-r">打赏</a>
+                        <a href="javascript:giftCoin();" class="ThdDl_ds f-r">打赏</a>
                         <div style="clear:both;"></div>
                     </div>
                     <div class="ThdDl_Bt">
