--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
@@ -77,7 +77,7 @@
             </li>
             <li>
                 <div class="UL2_hd">
-                    <a href="javascript:;">
+                    <a href="/Personal/FansBang">
                         <div class="UL2_hdtu f-l"><img src="/images/ranking_icon_04.png"></div>
                         <div class="UL2_hdtit">
                             <h3>粉丝榜</h3>
