--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/LastPlay.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/LastPlay.cshtml
@@ -95,11 +95,11 @@
         </table>
     </div>
 
-<script type="text/javascript">
-    function giftCoin() {
+    <script type="text/javascript">
+        function giftCoin() {
 
-        location.href = @("/Plan/Tip?uid="+@lastBettingRecord.UserId+"&ltype="+@lastBettingRecord.lType+"&playName="+@lastBettingRecord.PlayName);
-    }
-</script>
+            location.href = "/Plan/Tip?uid=@lastBettingRecord.UserId&ltype=@lastBettingRecord.lType&playName=@lastBettingRecord.PlayName";
+        }
+    </script>
 </body>
 </html>
