积分榜+bug修复

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
@@ -60,7 +60,7 @@
             </li>
             <li>
                 <div class="UL2_hd">
-                    <a href="javascript:;">
+                    <a href="/List/Integral">
                         <div class="UL2_hdtu f-l"><img src="/images/ranking_icon_03.png"></div>
                         <div class="UL2_hdtit">
                             <h3>积分榜</h3>
