--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetNickName.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetNickName.cshtml
@@ -25,6 +25,17 @@
         {
             $("#btnsub").click(function () {
                 var name = $("#name").val();
+                if (name.trim().length== 0)
+                {
+                    alertmsg("昵称不能为空");
+                    return false;
+                    
+                }
+                if (name.trim().length > 8)
+                {
+                    alertmsg("昵称长度不能超过8");
+                    return false;
+                }
                 $.post('/Personal/EditUser', { value: name, type: 1 }, function (data) {
                  
                     if (data.Success != true) {
