--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TransactionRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TransactionRecord.cshtml
@@ -246,7 +246,7 @@
                     } else if (item.Type == 7)
                     {
                         text = "邀请成功注册奖励";
-                    } else if (item.Type = 9)
+                    } else if (item.Type == 9)
                     {
                         text = "打赏";
                     } else if (item.Type == 4)
