--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -29,7 +29,14 @@
     <script type="text/javascript" src="/js/yjp.js"></script>
     <script type="text/javascript" src="/js/runTime2.js"></script>
     
-    <script type="text/javascript" src="/js/plan_scroll1.js"></script>
+    <script type="text/javascript" src="/js/plan_scroll1.js">
+
+    </script>
+
+    <script>
+      
+
+    </script>
     
     <style>
         .mscroll {
