--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Profit.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Profit.cshtml
@@ -105,7 +105,7 @@
                           $(".Ranking_Cinfo").html('<div class="mescroll-empty"><img class="empty-icon" src="/images/null.png"><p class="empty-tip">暂无相关数据~</p></div>');
                       } else
                       {
-                          buildHtml(data.data.RankMonyModelList, queryType);
+                          buildHtml(data.data.RankMonyModelList, queryType, lType);
                       }
 
 
@@ -117,7 +117,7 @@
               });
         }
 
-        function buildHtml(data, queryType)
+        function buildHtml(data, queryType,ltype)
         {
             console.log(data);
             var html = [];
@@ -138,31 +138,31 @@
                         +'<td width="33%" align="center" valign="middle">'
                           +' <div class="Ranking_Blogotu2">'
                             +' <div class="Ranking_B2tu"> '
-                            + '<a href="javascript:;"><img src="' + (value.Avater.length <= 0 ? '/images/default_avater.png' : value.Avater) + '"></a>'
+                            + '<a href="/Plan/PlayRecord/' + ltype + '?uid=' + value.UserId + '&type=1"><img src="' + (value.Avater == null ? '/images/default_avater.png' : value.Avater) + '"></a>'
                            +' </div>'
                         + ' <img src="' + gettop3img(value.Rank) + '" class="Ranking_PHtu">'
                         +' </div>'
                         + ' <h3 class="Ranking_name"><a href="javascript:;">' + value.NickName + '</a></h3>'
                          + '<span class="Ds_money2">' + value.Money + '</span>'
                         +'</td>'
-
+                        html2.push(tr2);
                     } else
                     {
                  tr = '<tr><td align="center" valign="middle"> <p>'+value.Rank+'</p></td>'
                   + '<td width="15%" align="center" valign="middle">'
                   + ' <div class="Ranking_Blogotu">'
-                  + '  <a href="javascript:;"><img src="' + (value.Avater.length <= 0 ? '/images/default_avater.png' : value.Avater) + '"></a>  </div>'
+                  + '  <a href="/Plan/PlayRecord/' + ltype + '?uid=' + value.UserId + '&type=1"><img src="' + (value.Avater == null ? '/images/default_avater.png' : value.Avater) + '"></a>  </div>'
                   + '   </td> <td align="left" valign="middle">'
                   + '   <p class="Ysfont"><a href="javascript:;">' + value.NickName + '</a></p>'
                   + ' </td> <td width="25%" align="center" valign="middle"><span class="Ds_money">' + value.Money + '</span></td>'
                   + ' </tr> '
                     }
 
-                    html2.push(tr2);
+                  
 
                 } else
                 {
-                    var tdrank = '<td align="center" valign="middle"> <p>4</p></td>';
+                    var tdrank = '<td align="center" valign="middle"> <p>' + value.Rank + '</p></td>';
                     if (value.Rank <= 3)
                     {
                         tdrank = '<td width="10%" align="center" valign="middle"><img src="' + gettop3img(value.Rank)+ '" class="Ranking_Btu"></td>';
@@ -171,7 +171,7 @@
                      tr= '<tr>' + tdrank
                     + '<td width="15%" align="center" valign="middle">'
                     + ' <div class="Ranking_Blogotu">'
-                    + '  <a href="javascript:;"><img src="' + (value.Avater.length <= 0 ? '/images/default_avater.png' : value.Avater) + '"></a>  </div>'
+                    + '  <a href="/Plan/PlayRecord/' + ltype + '?uid=' + value.UserId + '&type=1"><img src="' + (value.Avater == null ? '/images/default_avater.png' : value.Avater) + '"></a>  </div>'
                     + '   </td> <td align="left" valign="middle">'
                     + '   <p class="Ysfont"><a href="javascript:;">' + value.NickName + '</a></p>'
                     + ' </td> <td width="25%" align="center" valign="middle"><span class="Ds_money">' + value.Money + '</span></td>'
