--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBangList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBangList.cshtml
@@ -38,7 +38,7 @@
 
                             <td width="15%" align="center" valign="middle">
                                 <div class="Ranking_Blogotu">
-                                    <a href="javascript:;">
+                                    <a href="/Personal/UserCenter/@item.Followed_UserId">
                                         <img src="@item.HeadPath">
                                     </a>
 
@@ -69,7 +69,7 @@
                             {
                                 <td width="33%" align="center" valign="middle">
                                     <div class="Ranking_Blogotu2">
-                                        <div class="Ranking_B2tu"><a href="javascript:;"><img src="@item2.HeadPath"></a></div>
+                                        <div class="Ranking_B2tu"><a href="/Personal/UserCenter/@item2.Followed_UserId"><img src="@item2.HeadPath"></a></div>
                                         <img src="@Tool.GetRankImg(item2.Rank)" class="Ranking_PHtu">
                                     </div>
                                     <h3 class="Ranking_name"><a href="javascript:;">@item2.Name</a></h3>
@@ -93,7 +93,7 @@
                         {
                             <tr>
                                 <td width="10%" align="center" valign="middle"><p>@item.Rank</p></td>
-                                <td width="15%" align="center" valign="middle"><div class="Ranking_Blogotu"><a href="javascript:;"><img src="@item.HeadPath"></a></div></td>
+                                <td width="15%" align="center" valign="middle"><div class="Ranking_Blogotu"><a href="/Personal/UserCenter/@item.Followed_UserId"><img src="@item.HeadPath"></a></div></td>
                                 <td align="left" valign="middle"><p><a href="javascript:;">@item.Name</a></p></td>
                                 <td width="25%" align="center" valign="middle"><span class="Ds_money Fs_money">@item.Number</span></td>
                             </tr>
