--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
@@ -71,7 +71,7 @@
     </div>
 
     <div class="sion_content" >
-        <div class="sion_conInfo" style="height:100%;">
+        <div class="sion_conInfo" >
             <div id="mescroll" class="mescroll">
             
                 <div id="dataList" class="data-list">
@@ -85,7 +85,8 @@
 
     <script type="text/javascript">
     $(function () {
-
+        var dh = $(document.body).height() - $(".sion_header").height() - 90;
+        $(".sion_conInfo").height(dh);
         var mescroll = new MeScroll("mescroll", {
             //上拉加载的配置项
             up: {
@@ -102,7 +103,7 @@
                 } ,
             page: {
             num: 0, //当前页 默认0,回调之前会加1; 即callback(page)会从1开始
-            size: 20, //每页数据条数
+            size: 100, //每页数据条数
             time: null //加载第一页数据服务器返回的时间; 防止用户翻页时,后台新增了数据从而导致下一页数据重复;
             },
                 clearEmptyId: "dataList"
