添加提现功能

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
@@ -28,7 +28,7 @@
     <header class="hjc_header">
         <a href="/Personal/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">我的佣金</a>
-        <a href="javascript:;" class="SX_A">绑定账户</a>
+        <a href="/Amount/BindingBankCard" class="SX_A">绑定账户</a>
     </header>
 
     <div class="sion_header">
@@ -37,7 +37,7 @@
                 <h3>@MyYj</h3>
                 <a href="/Personal/CommissionRules"><p>我的佣金</p></a> 
             </div>
-            <a href="javascript:;" class="HdIf1_R f-r">提现</a>
+            <a href="/Amount/ExtractCash" class="HdIf1_R f-r">提现</a>
             <div style="clear:both;"></div>
         </div>
         <ul class="sion_hdInfo2">
