修改资讯样式问题。

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
@@ -1053,7 +1053,7 @@
         <a href="javascript:;" id="confirmBet" class="WF_ftR f-r">确定</a>
         <h3 class="WF_ftTitle">已选：<span>0</span>注</h3>
     </div>
-    <div class="mask" style="display: none;"></div>
+    <div class="mask" style="display: none;z-index:9998;"></div>
 
     <!--历史开奖号码-->
     <div class="WanFa_History">
