--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
@@ -85,7 +85,7 @@
 
     <script type="text/javascript">
     $(function () {
-        var dh = $(document.body).height() - $(".sion_header").height() - 90;
+        var dh = $(document.body).height() - $(".sion_header").height() - $(".hjc_header").height() - 10;
         $(".sion_conInfo").height(dh);
         var mescroll = new MeScroll("mescroll", {
             //上拉加载的配置项
@@ -187,7 +187,9 @@
           
             var moneyhtml = '<p>+<span>' + item.Money + '</span></p>';
             var timehtml = ' <p>' + item.UserName + getDateTime(item.SubTime, 1) + ' </p>';
-            if (curNavIndex == 2) {
+            var h3html = '';
+            if (curNavIndex == 2)
+            {
                 var text = "";
                 if (item.State == 1) {
                     text = "提现中";
@@ -200,10 +202,18 @@
                 moneyhtml = '<p><strong class="sion_strH">' + text + '</strong></p>';
                 timehtml = ' <p>' + getDateTime(item.SubTime, 2) + '</p>';
             }
+            if (curNavIndex == 1)
+            {
+                h3html = item.Issue+"期";
+            } else
+            {
+                h3html = item.Money;
 
+            }
+         
             var itemHtml = '<dl class="details_DL"> <dt><a href="javascript:;"><img src="' + item.LotteryIcon + '"></a></dt>'
             + '<dd>  <div class="details_ddRight">' + moneyhtml + '</div>'
-            + '  <div class="details_ddLeft"> <h3><a href="javascript:;">' + item.Money + '</a></h3>'
+            + '  <div class="details_ddLeft"> <h3><a href="javascript:;">' + h3html + '</a></h3>'
             + timehtml
             + '  </div> </dd> </dl>'
             itemList.push(itemHtml);
