--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/ExpertData.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/ExpertData.cshtml
@@ -43,7 +43,7 @@
                             </td>
                             <td width="15%" align="center" valign="middle">
                                 <div class="Ranking_Blogotu">
-                                    <a href="/Personal/UserCenter/@item.UserId">
+                                    <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">
                                         @if (string.IsNullOrEmpty(item.Avater))
                                         {
                                             <img src="/images/default_avater.png" />
@@ -57,7 +57,7 @@
                             </td>
                             <td align="left" valign="middle">
                                 <p class="Ysfont">
-                                    <a href="/Personal/UserCenter/@item.UserId">@item.NickName</a>
+                                    <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">@item.NickName</a>
                                 </p>
                             </td>
                             <td width="25%" align="center" valign="middle"><span class="Ds_money Jf_money">@item.Score</span></td>
@@ -165,7 +165,7 @@
                         </td>
                         <td width="15%" align="center" valign="middle">
                             <div class="Ranking_Blogotu">
-                                <a href="/Personal/UserCenter/@item.UserId">
+                                <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">
                                     @if (string.IsNullOrEmpty(item.Avater))
                                 {
                                         <img src="/images/default_avater.png" />
@@ -179,7 +179,7 @@
                         </td>
                         <td align="left" valign="middle">
                             <p class="Ysfont">
-                                <a href="/Personal/UserCenter/@item.UserId">@item.NickName</a>
+                                <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">@item.NickName</a>
                             </p>
                         </td>
                         <td width="25%" align="center" valign="middle"><span class="Ds_money Jf_money">@item.Score</span></td>
@@ -227,7 +227,7 @@
                         </td>
                         <td width="15%" align="center" valign="middle">
                             <div class="Ranking_Blogotu">
-                                <a href="/Personal/UserCenter/@item.UserId">
+                                <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">
                                     @if (string.IsNullOrEmpty(item.Avater))
                                         {
                                         <img src="/images/default_avater.png" />
@@ -241,7 +241,7 @@
                         </td>
                         <td align="left" valign="middle">
                             <p class="Ysfont">
-                                <a href="/Personal/UserCenter/@item.UserId">@item.NickName</a>
+                                <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">@item.NickName</a>
                             </p>
                         </td>
                         <td width="25%" align="center" valign="middle">
@@ -264,7 +264,8 @@
 <div class="Ranking_footer">
     <dl class="Rank_ftDL">
         <dt>
-            <a href="/Personal/UserCenter/@userDailyInfo.UserId">
+           
+            <a href="/Plan/PlayRecord/@userDailyInfo.LType?uid=@userDailyInfo.UserId&type=1">
                 @if (string.IsNullOrEmpty(@userDailyInfo.Avater))
                 {
                 <img src="/images/default_avater.png" />
@@ -278,7 +279,7 @@
         <dd>
             <p class="Ds_money1 Jf_money1 f-r">@userDailyInfo.Score</p>
             <div class="Rank_ftL">
-                <h3><a href="/Personal/UserCenter/@userDailyInfo.UserId">@userDailyInfo.NickName</a></h3>
+                <h3><a href="/Plan/PlayRecord/@userDailyInfo.LType?uid=@userDailyInfo.UserId&type=1">@userDailyInfo.NickName</a></h3>
                 <P>
                     当前排名：
                     @if (userDailyInfo.Rank > 0)
@@ -295,7 +296,8 @@
     </dl>
     <dl class="Rank_ftDL" style="display: none;">
         <dt>
-            <a href="/Personal/UserCenter/@userWeekInfo.UserId">
+          
+            <a href="/Plan/PlayRecord/@userWeekInfo.LType?uid=@userWeekInfo.UserId&type=1">
                 @if (string.IsNullOrEmpty(@userWeekInfo.Avater))
                 {
                 <img src="/images/default_avater.png" />
@@ -309,7 +311,7 @@
         <dd>
             <p class="Ds_money1 Jf_money1 f-r">@userWeekInfo.Score</p>
             <div class="Rank_ftL">
-                <h3><a href="/Personal/UserCenter/@userWeekInfo.UserId">@userWeekInfo.NickName</a></h3>
+                <h3><a href="/Plan/PlayRecord/@userWeekInfo.LType?uid=@userWeekInfo.UserId&type=1">@userWeekInfo.NickName</a></h3>
                 <P>
                     当前排名：
                     @if (userWeekInfo.Rank > 0)
@@ -326,7 +328,7 @@
     </dl>
     <dl class="Rank_ftDL" style="display: none;">
         <dt>
-            <a href="/Personal/UserCenter/@userMonthInfo.UserId">
+            <a href="/Plan/PlayRecord/@userMonthInfo.LType?uid=@userMonthInfo.UserId&type=1">
                 @if (string.IsNullOrEmpty(@userMonthInfo.Avater))
                 {
                 <img src="/images/default_avater.png" />
@@ -340,7 +342,7 @@
         <dd>
             <p class="Ds_money1 Jf_money1 f-r">@userMonthInfo.Score</p>
             <div class="Rank_ftL">
-                <h3><a href="/Personal/UserCenter/@userMonthInfo.UserId">@userMonthInfo.NickName</a></h3>
+                <h3><a href="/Plan/PlayRecord/@userMonthInfo.LType?uid=@userMonthInfo.UserId&type=1">@userMonthInfo.NickName</a></h3>
                 <P>
                     当前排名：
                     @if (userMonthInfo.Rank > 0)
@@ -357,7 +359,7 @@
     </dl>
     <dl class="Rank_ftDL" style="display: none;">
         <dt>
-            <a href="/Personal/UserCenter/@userTotalInfo.UserId">
+            <a href="/Plan/PlayRecord/@userTotalInfo.LType?uid=@userTotalInfo.UserId&type=1">
                 @if (string.IsNullOrEmpty(@userTotalInfo.Avater))
                 {
                 <img src="/images/default_avater.png" />
@@ -371,7 +373,7 @@
         <dd>
             <p class="Ds_money1 Jf_money1 f-r">@userTotalInfo.Score</p>
             <div class="Rank_ftL">
-                <h3><a href="/Personal/UserCenter/@userTotalInfo.UserId">@userTotalInfo.NickName</a></h3>
+                <h3><a href="/Plan/PlayRecord/@userTotalInfo.LType?uid=@userTotalInfo.UserId&type=1">@userTotalInfo.NickName</a></h3>
                 <P>
                     当前排名：
                     @if (userTotalInfo.Rank > 0)
